@@ -1,3 +1,5 @@
+* Dialer (ECCP): explicitly disconnect from DB connection to asterisk database,
+  and report additional information in case of failure.
 * Dialer (ECCP): add check for failure to list extensions in loginagent request
 * CallCenter Configuration, Campaigns Out, Do not Call List, Agent Console: 
   fix title display under elastixneo theme
